adjusted single project files

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -200,8 +200,6 @@
 }
 
 .hvr-bob {
-  display: inline-block;
-  vertical-align: middle;
   -webkit-transform: perspective(1px) translateZ(0);
   transform: perspective(1px) translateZ(0);
   -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0);
@@ -253,6 +251,7 @@ header {
   position: fixed;
   height: 70px;
   width: 100%;
+  z-index: 100;
 }
 
 header img {
@@ -378,20 +377,25 @@ header img {
       -ms-flex-direction: column;
           flex-direction: column;
   width: 90vw;
-  max-width: 1000px;
+  max-width: 1200px;
   margin-bottom: 200px;
   margin-top: 100px;
 }
 
 .container .project-heading {
-  margin-bottom: 80px;
+  margin-bottom: 30px;
   padding: 10px;
   max-width: 1000px;
   font-family: "Trispace", sans-serif;
 }
 
-.container .project-heading h3 {
-  text-align: left;
+.container .project-heading .project {
+  font-size: 3em;
+  margin-bottom: 5px;
+}
+
+.container .project-heading p {
+  margin: 40px 0px 20px 0px;
 }
 
 .container h4 {
@@ -412,7 +416,6 @@ header img {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  background-color: lightgray;
 }
 
 .all-projects a {
@@ -439,13 +442,14 @@ header img {
   height: 20em;
   overflow: hidden;
   margin: 0.5rem 0rem;
+  padding: 20px;
 }
 
 .all-projects div .tech-stack, .all-projects div .resource {
   position: relative;
   padding-top: 1em;
   width: 250px;
-  left: 2rem;
+  left: 1rem;
 }
 
 .all-projects div .tech-stack li, .all-projects div .resource li {
@@ -459,7 +463,7 @@ header img {
 .all-projects div h3 {
   font-family: "Montserrat", sans-serif;
   font-size: 2em;
-  padding-left: 2rem;
+  padding-left: 1rem;
   padding-top: 1rem;
   margin-right: 3em;
 }
@@ -582,18 +586,18 @@ header img {
   transition: .5s ease-in;
 }
 
-/*project heading animation*/
-.project {
-  font-size: 4em;
-}
-
 /* Phone Styles */
 @media only screen and (max-width: 600px) {
   .project {
-    font-size: 2em;
+    font-size: 2em !important;
   }
-  .container a {
-    width: 250px;
+  .container {
+    overflow: hidden;
+  }
+  .container div {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
 }
 
@@ -601,10 +605,7 @@ header img {
 /* Desktop Styles */
 @media only screen and (min-width: 1201px) {
   .container {
-    overflow-x: hidden;
-  }
-  .container .container {
-    width: 65vw;
+    width: 100vw;
   }
 }
 
@@ -628,6 +629,8 @@ header img {
 .one-projects .main-project-heading .project-single {
   font-size: 3em;
   margin-bottom: 5px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .one-projects .main-project-heading p {
@@ -697,23 +700,29 @@ header img {
 }
 
 .one-projects .project-content {
+  max-width: 1200px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  background-color: #F0FBDD;
+  background-color: lightgrey;
+  padding: 5px;
 }
 
 .one-projects .project-content img {
-  margin: 5px 0px 5px 0px;
-  padding: 20px;
+  margin: 5px;
+  padding: 5px;
+  max-width: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .one-projects .project-content .content {
-  margin: 20px;
-  padding: 10px;
+  margin: 10px;
+  padding: 7px;
   font-size: .9em;
   letter-spacing: .08em;
   line-height: 1.5em;
+  font-weight: 600;
 }
 
 /* Tablet Styles */
@@ -726,6 +735,15 @@ header img {
   }
   .project-content img {
     width: 100%;
+    padding: 20px !important;
+  }
+}
+
+/* Desktop Styles */
+@media only screen and (min-width: 1201px) {
+  .project-content img {
+    padding: 20px !important;
+    width: 60% !important;
   }
 }
 
@@ -802,7 +820,6 @@ header img {
   margin-top: 5em;
   line-height: 2em;
   font-size: 1.2rem;
-  z-index: -1;
 }
 
 .intro-content p {
@@ -935,6 +952,7 @@ header img {
   font-family: "Trispace", sans-serif;
   font-weight: bold;
   font-size: 2rem;
+  color: orange;
 }
 
 .footer-part2, .footer-part3, .footer-part4, .footer-icons, .footer-base {
