--- a/src/styles/partials/_projects.scss
+++ b/src/styles/partials/_projects.scss
@@ -31,9 +31,7 @@
     a {
         text-decoration: none;
         color: white;
-        flex: 1 1 50%;  
-        
-        
+        flex: 1 1 50%;    
     }
     div {
         @include flex(column, center);
@@ -41,12 +39,17 @@
         overflow: hidden;
         margin: 0.5rem 0rem;
         padding: 20px;
+       
+        @media only screen and (min-width: 601px) {
+          margin: 0.5rem 0.5rem;
+         
+        }  
         .tech-stack, .resource {
           position: relative;
           padding-top: 1em;
           width: 250px;
           left: 1rem;
-          
+          right: 1rem;
           li {
             display: inline-block;
             &:after {
@@ -63,9 +66,7 @@
           margin-right: 3em;
         }
 
-        @media only screen and (min-width: 601px) {
-          margin: 0.5rem 0.5rem;
-        }  
+        
     }
 }
 
@@ -87,11 +88,11 @@
     @include background($background-color, "https://www.macworld.co.uk/cmsdata/features/3608274/Terminalicon2_thumb800.png");
   }
 #old_port {
-    @include background($background-color, "../imgs/old_port.png");
+    @include background($background-color, "../imgs/old_port.jpg");
   }
 
 #new_port {
-    @include background($background-color, "../imgs/new_port.png");
+    @include background($background-color, "../imgs/new_port.jpg");
   }
 #pokemon{
     @include background($background-color, "../imgs/pokemon.png");
