--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -713,7 +713,7 @@ header img {
 }
 
 .one-projects .resources a:hover {
-  color: #aa9f26;
+  background-color: #aa9f26;
   cursor: pointer;
 }
 
@@ -752,7 +752,7 @@ header img {
   border-radius: 25px;
   padding: 10px;
   margin: 10px 10px 10px 0px;
-  font-size: .75em;
+  font-size: .8em;
   background-color: black;
   color: white;
 }
@@ -773,11 +773,11 @@ header img {
 
 .one-projects .project-content .content {
   margin: 10px;
-  padding: 7px;
+  padding: 10px;
   font-size: 1rem;
   letter-spacing: .08em;
   line-height: 1.5em;
-  font-weight: 600;
+  font-weight: 500;
   width: 100%;
 }
 
