--- a/src/styles/partials/_projects.scss
+++ b/src/styles/partials/_projects.scss
@@ -161,7 +161,7 @@ and (-webkit-min-device-pixel-ratio: 1) {
         content: " / ";
       }
       &:hover{ 
-        color: $alternate-color;
+        background-color: $alternate-color;
         cursor: pointer;
       }
     }
@@ -179,7 +179,7 @@ and (-webkit-min-device-pixel-ratio: 1) {
         border-radius: 25px;
         padding: 10px;
         margin: 10px 10px 10px 0px;
-        font-size: .75em;
+        font-size: .8em;
         background-color: black;
         color: white;
     }
@@ -191,18 +191,17 @@ and (-webkit-min-device-pixel-ratio: 1) {
   padding: 5px;
   img{
      margin: 7px;
-  
      width: 100%;
      border: 3px solid black;
     
    }
    .content{
      margin: 10px;
-     padding: 7px;
+     padding: 10px;
      font-size: 1rem;
      letter-spacing: .08em;
      line-height: 1.5em;
-     font-weight: 600;
+     font-weight: 500;
      width: 100%;
    }
  }
