--- a/src/styles/partials/_projects.scss
+++ b/src/styles/partials/_projects.scss
@@ -193,7 +193,7 @@ and (-webkit-min-device-pixel-ratio: 1) {
      margin: 7px;
      width: 100%;
      border: 3px solid black;
-    
+     height: auto;
    }
    .content{
      margin: 10px;
