--- a/src/styles/partials/_projects.scss
+++ b/src/styles/partials/_projects.scss
@@ -216,6 +216,7 @@ and (-webkit-min-device-pixel-ratio: 1) {
         flex-flow: row wrap;
         img{
           margin: 10px !important;
+          height: auto;
          }
       }
             
@@ -228,7 +229,7 @@ and (-webkit-min-device-pixel-ratio: 1) {
     img{
       margin: 10px !important;
        width: 130% !important;
-       
+       height: auto !important;
      }
   }
   }
