--- a/src/styles/partials/_projects.scss
+++ b/src/styles/partials/_projects.scss
@@ -16,6 +16,7 @@
         margin-bottom: 5px;
       }
       p {
+        font-size: 1em;
         margin: 40px 0px 20px 0px;
       }
     }
@@ -145,6 +146,7 @@ and (-webkit-min-device-pixel-ratio: 1) {
       
     }
     p {
+      font-size: 1em;
       margin: 40px 0px 20px 0px;
     }
 
@@ -157,6 +159,7 @@ and (-webkit-min-device-pixel-ratio: 1) {
     margin-bottom: 20px;
    
     a {
+      color: black;
       display: inline-block;
       text-decoration: none;
       &:after {
@@ -195,11 +198,13 @@ and (-webkit-min-device-pixel-ratio: 1) {
   background-color: lightgrey;
   padding: 5px;
   img{
-    margin: 10px !important;
      width: 100%;
      height: auto;
-     border: 3px solid black;
-
+     border: 3px solid orange;
+     display: block;
+     margin: 0 auto;
+     margin-top: 15px !important;
+     margin-bottom: 15px !important;
    }
    .content{
      margin: 10px;
@@ -216,28 +221,34 @@ and (-webkit-min-device-pixel-ratio: 1) {
 
 /* Tablet Styles */ 
 @media only screen 
+
 and (max-width: 1025px) 
 and (-webkit-min-device-pixel-ratio: 1) {
       .project-content {
         flex-flow: row wrap;
         img{
-          margin: 10px !important;
-          width: 100%;
-     height: auto;
+      
+           width: 70% !important;
+           display: block;
+          margin: 0 auto;
+          margin-top: 15px !important;
+          margin-bottom: 15px !important;
+     
          }
       }
             
 }
 
 /* Desktop Styles */ 
-@media only screen and (min-width:1201px) {
+@media only screen and (min-width:1026px) {
   .project-content {
-   
+
     img{
-      margin: 10px !important;
-       width: 130% !important;
-      
-     }
-  }
+      width: 50% !important;
+      display: block;
+      margin: 0 auto;
+      margin: 15px !important;
+    }
+    }
   }
   
