--- a/src/styles/partials/_projects.scss
+++ b/src/styles/partials/_projects.scss
@@ -205,6 +205,7 @@ and (-webkit-min-device-pixel-ratio: 1) {
      margin: 0 auto;
      margin-top: 15px !important;
      margin-bottom: 15px !important;
+     height: auto;
    }
    .content{
      margin: 10px;
