--- a/src/styles/partials/_projects.scss
+++ b/src/styles/partials/_projects.scss
@@ -206,6 +206,7 @@ and (-webkit-min-device-pixel-ratio: 1) {
      margin-top: 15px !important;
      margin-bottom: 15px !important;
      height: auto;
+     object-fit: contain;
    }
    .content{
      margin: 10px;
