added flex column and align flex start for safari issue

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -770,21 +770,29 @@ header img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
   background-color: lightgrey;
   padding: 5px;
 }
 
 .one-projects .project-content img {
-  width: 100%;
-  height: auto;
-  border: 3px solid orange;
+  width: 70%;
+  border: 3px solid #aa9f26;
   display: block;
   margin: 0 auto;
   margin-top: 15px !important;
   margin-bottom: 15px !important;
   height: auto;
-  -o-object-fit: contain;
-     object-fit: contain;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .one-projects .project-content .content {
@@ -797,25 +805,14 @@ header img {
   width: 100%;
 }
 
-/* Tablet Styles */
-@media only screen and (max-width: 1025px) and (-webkit-min-device-pixel-ratio: 1) {
-  .project-content {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-flow: row wrap;
-            flex-flow: row wrap;
-  }
-  .project-content img {
-    width: 70% !important;
-    display: block;
-    margin: 0 auto;
-    margin-top: 15px !important;
-    margin-bottom: 15px !important;
-  }
-}
-
 /* Desktop Styles */
 @media only screen and (min-width: 1026px) {
+  .project-content {
+    -webkit-box-orient: horizontal !important;
+    -webkit-box-direction: normal !important;
+        -ms-flex-flow: row nowrap !important;
+            flex-flow: row nowrap !important;
+  }
   .project-content img {
     width: 50% !important;
     display: block;
