--- a/src/styles/partials/_projects.scss
+++ b/src/styles/partials/_projects.scss
@@ -198,6 +198,12 @@ and (-webkit-min-device-pixel-ratio: 1) {
   flex-flow: row wrap;
   background-color: lightgrey;
   padding: 5px;
+  div:first-child{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+   
+  }
   img{
      width: 70%;
      border: 3px solid $alternate-color;
@@ -206,8 +212,7 @@ and (-webkit-min-device-pixel-ratio: 1) {
      margin-top: 15px !important;
      margin-bottom: 15px !important;
      height: auto;
-     align-items: flex-start;
-     flex-direction: column;
+
    }
    .content{
      margin: 10px;
