--- a/src/styles/partials/_projects.scss
+++ b/src/styles/partials/_projects.scss
@@ -223,20 +223,22 @@ and (-webkit-min-device-pixel-ratio: 1) {
      width: 100%;
    }
  }
-
 }    
-
 
 /* Desktop Styles */ 
 @media only screen and (min-width:1026px) {
   .project-content {
     flex-flow: row nowrap !important;
     img{
-      width: 50% !important;
+      width: 100% !important;
       display: block;
       margin: 0 auto;
       margin: 15px !important;
     }
+    .content{
+      margin-left: 25px !important;
+      margin-right: 25px !important;
+     }
     }
   }
   
