--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -896,8 +896,8 @@ header img {
 
 .intro-sec1 {
   margin: 5px;
-  margin-right: 30px;
-  margin-left: 30px;
+  margin-right: 20px;
+  margin-left: 20px;
 }
 
 .intro-content {
@@ -955,8 +955,8 @@ header img {
 /** MAIN CONTENT */
 @media only screen and (min-width: 768px) {
   .intro-sec1, .typewriter {
-    margin-right: 200px;
-    margin-left: 200px;
+    margin-right: 100px;
+    margin-left: 100px;
   }
 }
 
@@ -964,8 +964,8 @@ header img {
 /* MAIN CONTENT */
 @media only screen and (min-width: 996px) {
   .intro-sec1, .typewriter {
-    margin-right: 200px;
-    margin-left: 200px;
+    margin-right: 100px;
+    margin-left: 100px;
   }
   .intro-container h2 {
     font-size: 5rem;
@@ -1205,6 +1205,10 @@ header img {
           box-sizing: border-box;
 }
 
+html {
+  height: 100%;
+}
+
 body {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1218,9 +1222,18 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  width: 100vw;
   height: 100vh;
+  width: 100vw;
   font-family: "Montserrat", sans-serif;
+}
+
+@media only screen and (min-width: 3000px) {
+  footer {
+    position: absolute;
+    bottom: 0;
+    height: 60px;
+    width: 100%;
+  }
 }
 
 main {
