--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,16 +15,28 @@
     padding: 0;
     scroll-behavior: smooth;
     box-sizing: border-box;
+
 } 
 
+html{
+    height: 100%;
+  }
 body {
-    @include flex(row, center);
-    width: 100vw;
+    @include flex(row, center); 
     height: 100vh;
+    width: 100vw;
     font-family: $body-font-family;
     //background: linear-gradient(90deg, $background-color 50%, $white-color 50%);
 }
 
+@media only screen and (min-width: 3000px) {
+    footer{
+        position: absolute; 
+        bottom: 0; 
+        height: 60px; 
+        width: 100%; 
+    }
+}
 main {   
     margin: auto;
     width: 100%;
