--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -1,7 +1,7 @@
 // create variables
 
-$background-color: #aa9f26;
-$alternate-color: #aa9f26;  
+$background-color: #6be8bf;  
+$alternate-color: #6be8bf;  
 $heading-color: darkgrey;
 $hover-color: darkblue;
 $text-color: black; 
