--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Trispace:wght@200;400;500;600&display=swap");
 .typewriter h1, .project, .project-single {
-  color: #aa9f26;
+  color: #6be8bf;
   overflow: hidden;
   /* Ensures the content is not revealed until the animation */
   border-right: .15em solid orange;
@@ -73,7 +73,7 @@
   left: 51%;
   right: 51%;
   bottom: 0;
-  background: #aa9f26;
+  background: #6be8bf;
   height: 4px;
   -webkit-transition-property: left, right;
   transition-property: left, right;
@@ -240,14 +240,14 @@
 }
 
 .hvr-fade:hover, .hvr-fade:focus, .hvr-fade:active {
-  background-color: #aa9f26;
+  background-color: #6be8bf;
   color: white;
 }
 
 /* menu bar area drop down*/
 /* Mobile menu */
 header {
-  background-color: #aa9f26;
+  background-color: #6be8bf;
   position: fixed;
   height: 70px;
   width: 100%;
@@ -492,7 +492,7 @@ header img {
 
 #ytc:hover {
   color: black;
-  background: #aa9f26;
+  background: #6be8bf;
   -webkit-transition: .5s ease-in;
   transition: .5s ease-in;
 }
@@ -513,7 +513,7 @@ header img {
 
 #taskio:hover {
   color: black;
-  background: #aa9f26;
+  background: #6be8bf;
   -webkit-transition: .5s ease-in;
   transition: .5s ease-in;
 }
@@ -534,7 +534,7 @@ header img {
 
 #readme:hover {
   color: black;
-  background: #aa9f26;
+  background: #6be8bf;
   -webkit-transition: .5s ease-in;
   transition: .5s ease-in;
 }
@@ -555,7 +555,7 @@ header img {
 
 #pokemon:hover {
   color: black;
-  background: #aa9f26;
+  background: #6be8bf;
   -webkit-transition: .5s ease-in;
   transition: .5s ease-in;
 }
@@ -576,7 +576,7 @@ header img {
 
 #rpsls:hover {
   color: black;
-  background: #aa9f26;
+  background: #6be8bf;
   -webkit-transition: .5s ease-in;
   transition: .5s ease-in;
 }
@@ -597,7 +597,7 @@ header img {
 
 #old_port:hover {
   color: black;
-  background: #aa9f26;
+  background: #6be8bf;
   -webkit-transition: .5s ease-in;
   transition: .5s ease-in;
 }
@@ -618,7 +618,7 @@ header img {
 
 #new_port:hover {
   color: black;
-  background: #aa9f26;
+  background: #6be8bf;
   -webkit-transition: .5s ease-in;
   transition: .5s ease-in;
 }
@@ -639,7 +639,7 @@ header img {
 
 #pokemon:hover {
   color: black;
-  background: #aa9f26;
+  background: #6be8bf;
   -webkit-transition: .5s ease-in;
   transition: .5s ease-in;
 }
@@ -717,7 +717,7 @@ header img {
 }
 
 .one-projects .resources a:hover {
-  background-color: #aa9f26;
+  background-color: #6be8bf;
   cursor: pointer;
 }
 
@@ -793,7 +793,7 @@ header img {
 
 .one-projects .project-content img {
   width: 70%;
-  border: 3px solid #aa9f26;
+  border: 3px solid #6be8bf;
   display: block;
   margin: 0 auto;
   margin-top: 15px !important;
@@ -857,7 +857,7 @@ header img {
 }
 
 .intro-container h1 span.features-special {
-  color: #aa9f26;
+  color: #6be8bf;
   font-size: 6rem;
 }
 
@@ -873,7 +873,7 @@ header img {
 }
 
 .intro_paragraph p span:nth-child(4).features-special {
-  color: #aa9f26;
+  color: #6be8bf;
   font-size: 2rem;
   font-weight: 600;
   font-family: "Trispace", sans-serif;
@@ -890,7 +890,7 @@ header img {
 }
 
 .intro_paragraph .more-button:hover {
-  color: #aa9f26;
+  color: #6be8bf;
   cursor: pointer;
 }
 
